--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "vue-tsc": "^1.8.4"
   },
   "dependencies": {
+    "@ark-ui/vue": "^0.5.3",
     "@rifandani/nxact-yutiriti": "^1.2.1",
     "@tanstack/vue-query": "^4.29.20",
     "@vee-validate/zod": "^4.10.6",
