--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vue-template",
+  "name": "vue-app",
   "version": "0.0.0",
   "description": "Bulletproof Vue 3 SPA Template",
   "license": "MIT",
   "author": "Tri Rizeki Rifandani",
-  "packageManager": "pnpm@7.28.0",
+  "packageManager": "pnpm@8.6.9",
   "msw": {
     "workerDirectory": "public"
   },
@@ -29,19 +29,19 @@
     "test:preview:coverage": "vite preview --outDir coverage"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.3.2",
-    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/vue": "^7.0.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.16.19",
-    "@types/testing-library__jest-dom": "^5.14.8",
+    "@types/node": "^18.17.1",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-istanbul": "^0.33.0",
     "@vitest/ui": "^0.33.0",
@@ -49,37 +49,37 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.2.1",
-    "eslint": "^8.44.0",
+    "daisyui": "^3.5.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^5.11.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint-plugin-vue": "^9.16.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "msw": "^1.2.2",
+    "msw": "^1.2.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.25",
+    "postcss": "^8.4.27",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.1.6",
-    "vite": "^4.4.3",
+    "vite": "^4.4.7",
     "vitest": "^0.32.4",
-    "vue-tsc": "^1.8.4"
+    "vue-tsc": "^1.8.8"
   },
   "dependencies": {
     "@ark-ui/vue": "^0.5.3",
-    "@rifandani/nxact-yutiriti": "^1.2.1",
-    "@tanstack/vue-query": "^4.29.20",
-    "@vee-validate/zod": "^4.10.6",
+    "@rifandani/nxact-yutiriti": "^1.2.2",
+    "@tanstack/vue-query": "^4.32.0",
+    "@vee-validate/zod": "^4.10.8",
     "@vueuse/core": "^10.2.1",
-    "pinia": "^2.1.4",
+    "pinia": "^2.1.6",
     "redaxios": "^0.5.1",
-    "tailwind-merge": "^1.13.2",
-    "type-fest": "^3.13.0",
-    "typesafe-i18n": "^5.24.4",
-    "vee-validate": "^4.10.6",
+    "tailwind-merge": "^1.14.0",
+    "type-fest": "^3.13.1",
+    "typesafe-i18n": "^5.25.1",
+    "vee-validate": "^4.10.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "zod": "^3.21.4"
