--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "format": "prettier --write src/",
     "lint": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --ignore-path .gitignore --fix",
-    "msw:init": "msw init public/ --save",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "typesafe-i18n": "typesafe-i18n",
+    "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
     "dev": "vite",
     "start": "npm-run-all --parallel dev typesafe-i18n",
@@ -35,6 +35,7 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/eslint-plugin-query": "^4.32.5",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/vue": "^7.0.0",
