--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.4",
     "vue-tsc": "^1.8.8"
   },
