--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": ["./tsconfig.paths.json", "@tsconfig/node18/tsconfig.json"],
   "include": ["vite.config.*", "vitest.config.*", "postcss.config.*", "tailwind.config.*"],
   "compilerOptions": {
     "composite": true,
