--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bulletproof Vue 3 SPA Template",
   "license": "MIT",
   "author": "Tri Rizeki Rifandani",
-  "packageManager": "pnpm@8.7.4",
+  "packageManager": "pnpm@8.10.2",
   "msw": {
     "workerDirectory": "public"
   },
@@ -20,7 +20,9 @@
     "dev": "vite",
     "start": "npm-run-all --parallel dev typesafe-i18n",
     "build-only": "pnpm msw:delete && vite build",
+    "build-only:staging": "pnpm msw:delete && vite build --mode staging",
     "build": "npm-run-all type-check build-only",
+    "build:staging": "npm-run-all type-check build-only:staging",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -29,61 +31,60 @@
     "test:preview:coverage": "vite preview --outDir coverage"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "@iconify/vue": "^4.1.1",
-    "@rushstack/eslint-patch": "^1.4.0",
+    "@rushstack/eslint-patch": "^1.5.1",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/eslint-plugin-query": "^4.34.1",
-    "@testing-library/jest-dom": "^6.1.3",
+    "@tanstack/eslint-plugin-query": "^4.36.1",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/vue": "^7.0.0",
     "@tsconfig/node18": "^18.2.2",
-    "@types/jsdom": "^21.1.3",
-    "@types/node": "^18.17.17",
-    "@types/testing-library__jest-dom": "^6.0.0",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vitest/coverage-istanbul": "^0.34.4",
-    "@vitest/ui": "^0.34.4",
+    "@types/jsdom": "^21.1.5",
+    "@types/node": "^18.18.9",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitest/coverage-istanbul": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.15",
-    "daisyui": "^3.7.4",
-    "eslint": "^8.49.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.4",
+    "eslint": "^8.53.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-testing-library": "^6.0.1",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-testing-library": "^6.1.0",
+    "eslint-plugin-vue": "^9.18.1",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "msw": "^1.3.1",
+    "msw": "^1.3.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.2.2",
-    "vite": "^4.4.9",
+    "vite": "^4.5.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^1.8.11"
+    "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.22"
   },
   "dependencies": {
     "@ark-ui/vue": "^0.8.0",
     "@rifandani/nxact-yutiriti": "^1.2.2",
-    "@tanstack/vue-query": "^4.35.3",
-    "@vee-validate/zod": "^4.11.6",
-    "@vueuse/core": "^10.4.1",
-    "axios": "^1.5.0",
-    "pinia": "^2.1.6",
+    "@tanstack/vue-query": "^4.37.1",
+    "@vee-validate/zod": "^4.11.8",
+    "@vueuse/core": "^10.5.0",
+    "axios": "^1.6.0",
+    "pinia": "^2.1.7",
     "tailwind-merge": "^1.14.0",
-    "type-fest": "^4.3.1",
+    "type-fest": "^4.6.0",
     "typesafe-i18n": "^5.26.2",
-    "vee-validate": "^4.11.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "zod": "^3.22.2"
+    "vee-validate": "^4.11.8",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
+    "zod": "^3.22.4"
   }
 }
