chore: update msw v2, vue query v5

--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "composite": true,
     "lib": [],
-    "types": ["jsdom", "@testing-library/jest-dom"]
+    "types": ["vitest/globals", "jsdom", "@testing-library/jest-dom"]
   }
 }
