--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "test:preview:coverage": "vite preview --outDir coverage"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.8.1",
-    "@commitlint/config-conventional": "^17.8.1",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.5.1",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/eslint-plugin-query": "^4.36.1",
+    "@tanstack/eslint-plugin-query": "^5.6.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/vue": "^7.0.0",
+    "@testing-library/vue": "^8.0.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.5",
     "@types/node": "^18.18.9",
@@ -59,12 +59,13 @@
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "msw": "^1.3.2",
+    "msw": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "~5.2.2",
     "vite": "^4.5.0",
     "vite-tsconfig-paths": "^4.2.1",
@@ -74,17 +75,19 @@
   "dependencies": {
     "@ark-ui/vue": "^0.8.0",
     "@rifandani/nxact-yutiriti": "^1.2.2",
-    "@tanstack/vue-query": "^4.37.1",
+    "@tanstack/vue-query": "^5.8.1",
+    "@tanstack/vue-query-devtools": "^5.8.0",
     "@vee-validate/zod": "^4.11.8",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "pinia": "^2.1.7",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.0.0",
     "type-fest": "^4.6.0",
     "typesafe-i18n": "^5.26.2",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-validation-error": "^2.1.0"
   }
 }
