--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "Tri Rizeki Rifandani",
   "packageManager": "pnpm@8.10.2",
+  "type": "module",
   "msw": {
     "workerDirectory": "public"
   },
@@ -31,8 +32,8 @@
     "test:preview:coverage": "vite preview --outDir coverage"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
+    "@commitlint/cli": "^18.4.0",
+    "@commitlint/config-conventional": "^18.4.0",
     "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.5.1",
     "@tailwindcss/forms": "^0.5.6",
@@ -43,23 +44,22 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.5",
     "@types/node": "^18.18.9",
-    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue": "^4.4.1",
     "@vitest/coverage-istanbul": "^0.34.6",
     "@vitest/ui": "^0.34.6",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^3.9.4",
     "eslint": "^8.53.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-testing-library": "^6.1.0",
+    "eslint-plugin-testing-library": "^6.1.2",
     "eslint-plugin-vue": "^9.18.1",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "msw": "^2.0.3",
+    "msw": "^2.0.5",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
@@ -73,16 +73,16 @@
     "vue-tsc": "^1.8.22"
   },
   "dependencies": {
-    "@ark-ui/vue": "^0.8.0",
     "@rifandani/nxact-yutiriti": "^1.2.2",
     "@tanstack/vue-query": "^5.8.1",
     "@tanstack/vue-query-devtools": "^5.8.0",
     "@vee-validate/zod": "^4.11.8",
-    "@vueuse/core": "^10.5.0",
-    "axios": "^1.6.0",
+    "@vueuse/core": "^10.6.0",
+    "axios": "^1.6.1",
     "pinia": "^2.1.7",
+    "primevue": "^3.40.1",
     "tailwind-merge": "^2.0.0",
-    "type-fest": "^4.6.0",
+    "type-fest": "^4.7.1",
     "typesafe-i18n": "^5.26.2",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.8",
