--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.6.0",
     "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/user-event": "^14.5.1",
     "@testing-library/vue": "^8.0.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.5",
