--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write src/",
     "lint": "eslint . --ext .vue,.ts,.tsx,.cts,.mts",
     "lint:fix": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --fix",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "typesafe-i18n": "typesafe-i18n",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
@@ -21,8 +21,8 @@
     "start": "npm-run-all --parallel dev typesafe-i18n",
     "build-only": "pnpm msw:delete && vite build",
     "build-only:staging": "pnpm msw:delete && vite build --mode staging",
-    "build": "npm-run-all type-check build-only",
-    "build:staging": "npm-run-all type-check build-only:staging",
+    "build": "npm-run-all typecheck build-only",
+    "build:staging": "npm-run-all typecheck build-only:staging",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -31,61 +31,61 @@
     "test:preview:coverage": "vite preview --outDir coverage"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.0",
-    "@commitlint/config-conventional": "^18.4.0",
+    "@commitlint/cli": " ^18.4.4",
+    "@commitlint/config-conventional": " ^18.4.4",
     "@iconify/vue": "^4.1.1",
-    "@rushstack/eslint-patch": "^1.5.1",
-    "@tailwindcss/forms": "^0.5.6",
+    "@rushstack/eslint-patch": " ^1.6.1",
+    "@tailwindcss/forms": " ^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/eslint-plugin-query": "^5.6.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/user-event": "^14.5.1",
-    "@testing-library/vue": "^8.0.0",
+    "@tanstack/eslint-plugin-query": " ^5.17.7",
+    "@testing-library/jest-dom": " ^6.2.0",
+    "@testing-library/user-event": " ^14.5.2",
+    "@testing-library/vue": " ^8.0.1",
     "@tsconfig/node18": "^18.2.2",
-    "@types/jsdom": "^21.1.5",
+    "@types/jsdom": " ^21.1.6",
     "@types/node": "^18.18.9",
-    "@vitejs/plugin-vue": "^4.4.1",
-    "@vitest/coverage-istanbul": "^0.34.6",
-    "@vitest/ui": "^0.34.6",
-    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vitejs/plugin-vue": " ^5.0.2",
+    "@vitest/coverage-istanbul": " ^1.1.3",
+    "@vitest/ui": " ^1.1.3",
+    "@vue/eslint-config-prettier": " ^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.4.0",
+    "@vue/tsconfig": " ^0.5.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": " ^8.56.0",
     "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-testing-library": "^6.1.2",
-    "eslint-plugin-vue": "^9.18.1",
+    "eslint-plugin-tailwindcss": " ^3.13.1",
+    "eslint-plugin-testing-library": " ^6.2.0",
+    "eslint-plugin-vue": " ^9.19.2",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "husky": "^8.0.3",
-    "jsdom": "^22.1.0",
-    "msw": "^2.0.5",
+    "jsdom": " ^23.1.0",
+    "msw": " ^2.0.12",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.5",
+    "postcss": " ^8.4.33",
+    "prettier": " ^3.1.1",
+    "tailwindcss": " ^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.2.2",
-    "vite": "^4.5.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22"
+    "ts-node": " ^10.9.2",
+    "typescript": " ~5.3.3",
+    "vite": " ^5.0.11",
+    "vite-tsconfig-paths": " ^4.2.3",
+    "vitest": " ^1.1.3",
+    "vue-tsc": " ^1.8.27"
   },
   "dependencies": {
     "@rifandani/nxact-yutiriti": "^1.2.2",
-    "@tanstack/vue-query": "^5.8.1",
-    "@tanstack/vue-query-devtools": "^5.8.0",
-    "@vee-validate/zod": "^4.11.8",
-    "@vueuse/core": "^10.6.0",
-    "axios": "^1.6.1",
+    "@tanstack/vue-query": " ^5.17.7",
+    "@tanstack/vue-query-devtools": " ^5.17.7",
+    "@vee-validate/zod": " ^4.12.4",
+    "@vueuse/core": "^10.7.1",
+    "axios": "^1.6.5",
     "pinia": "^2.1.7",
-    "primevue": "^3.40.1",
-    "tailwind-merge": "^2.0.0",
-    "type-fest": "^4.7.1",
+    "primevue": " ^3.45.0",
+    "tailwind-merge": " ^2.2.0",
+    "type-fest": " ^4.9.0",
     "typesafe-i18n": "^5.26.2",
-    "vee-validate": "^4.11.8",
-    "vue": "^3.3.8",
+    "vee-validate": " ^4.12.4",
+    "vue": " ^3.4.5",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
