chore: replace npm-run-all with npm-run-all2, add rollup-plugin-visualizer, add @types/eslint, add gh actions

--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
     "lint:fix": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --fix",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "typesafe-i18n": "typesafe-i18n",
-    "msw:init": "msw init public/ --save",
-    "msw:delete": "rm -rf public/mockServiceWorker.js",
-    "dev": "vite",
-    "start": "npm-run-all --parallel dev typesafe-i18n",
-    "build-only": "pnpm msw:delete && vite build",
-    "build-only:staging": "pnpm msw:delete && vite build --mode staging",
-    "build": "npm-run-all typecheck build-only",
-    "build:staging": "npm-run-all typecheck build-only:staging",
-    "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:preview": "vite preview --outDir html",
-    "test:preview:coverage": "vite preview --outDir coverage"
+    "test:preview:coverage": "vite preview --outDir coverage",
+    "msw:init": "msw init public/ --save",
+    "msw:delete": "rm -rf public/mockServiceWorker.js",
+    "dev": "run-p vite typesafe-i18n",
+    "build-only": "pnpm msw:delete && vite build",
+    "build-only:staging": "pnpm msw:delete && vite build --mode staging",
+    "build": "run-p typecheck build-only",
+    "build:staging": "run-p typecheck build-only:staging",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@commitlint/cli": " ^18.4.4",
@@ -42,6 +41,7 @@
     "@testing-library/user-event": " ^14.5.2",
     "@testing-library/vue": " ^8.0.1",
     "@tsconfig/node18": "^18.2.2",
+    "@types/eslint": "^8.56.2",
     "@types/jsdom": " ^21.1.6",
     "@types/node": "^18.18.9",
     "@vitejs/plugin-vue": " ^5.0.2",
@@ -60,9 +60,9 @@
     "husky": "^8.0.3",
     "jsdom": " ^23.1.0",
     "msw": " ^2.0.12",
-    "npm-run-all": "^4.1.5",
     "postcss": " ^8.4.33",
     "prettier": " ^3.1.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": " ^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": " ^10.9.2",
@@ -79,6 +79,7 @@
     "@vee-validate/zod": " ^4.12.4",
     "@vueuse/core": "^10.7.1",
     "axios": "^1.6.5",
+    "npm-run-all2": "^6.1.1",
     "pinia": "^2.1.7",
     "primevue": " ^3.45.0",
     "tailwind-merge": " ^2.2.0",
