--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "prepare": "husky install",
+    "gen:pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
     "format": "prettier --write src/",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -23,12 +24,30 @@
     "test:preview:coverage": "vite preview --outDir coverage",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
-    "dev-only": "vite",
+    "dev-only": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
     "dev": "run-p dev-only typesafe-i18n",
+    "dev:claims": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW=true vite --force",
+    "dev:destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true SW_DESTROY=true vite --force",
+    "dev:claims-destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW_DESTROY=true SW=true vite --force",
     "build-only": "vite build",
     "build-only:staging": "vite build --mode staging",
-    "build": "run-p typecheck build-only",
-    "build:staging": "run-p typecheck build-only:staging",
+    "build": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true run-s typecheck build-only",
+    "build:staging": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true run-s typecheck build-only:staging",
+    "build:reloadsw": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true run-s typecheck build-only",
+    "build:claims": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true CLAIMS=true run-s typecheck build-only",
+    "build:reloadsw-claims": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true CLAIMS=true run-s typecheck build-only",
+    "build:sw": "rimraf dist && DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true run-s typecheck build-only",
+    "build:sw-reloadsw": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true RELOAD_SW=true run-s typecheck build-only",
+    "build:sw-claims": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true CLAIMS=true run-s typecheck build-only",
+    "build:sw-reloadsw-claims": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true RELOAD_SW=true CLAIMS=true run-s typecheck build-only",
+    "build:destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW_DESTROY=true run-s typecheck build-only",
+    "build:reloadsw-destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true SW_DESTROY=true run-s typecheck build-only",
+    "build:claims-destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true CLAIMS=true SW_DESTROY=true run-s typecheck build-only",
+    "build:reloadsw-claims-destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true RELOAD_SW=true CLAIMS=true SW_DESTROY=true run-s typecheck build-only",
+    "build:sw-destroy": "rimraf dist && DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true SW_DESTROY=true run-s typecheck build-only",
+    "build:sw-reloadsw-destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true RELOAD_SW=true SW_DESTROY=true run-s typecheck build-only",
+    "build:sw-claims-destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true CLAIMS=true SW_DESTROY=true run-s typecheck build-only",
+    "build:sw-reloadsw-claims-destroy": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true SW=true RELOAD_SW=true CLAIMS=true SW_DESTROY=true run-s typecheck build-only",
     "preview": "vite preview",
     "release": "bumpp"
   },
@@ -56,6 +75,7 @@
     "@commitlint/cli": " ^18.4.4",
     "@commitlint/config-conventional": " ^18.4.4",
     "@iconify/vue": "^4.1.1",
+    "@rollup/plugin-replace": "^5.0.5",
     "@tailwindcss/forms": " ^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": " ^6.2.0",
@@ -64,6 +84,7 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": " ^21.1.6",
     "@types/node": "^20.11.0",
+    "@vite-pwa/assets-generator": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitest/coverage-istanbul": "^1.2.0",
     "@vitest/ui": "^1.2.0",
@@ -71,20 +92,27 @@
     "autoprefixer": "^10.4.16",
     "eslint": " ^8.56.0",
     "eslint-plugin-format": "^0.1.0",
+    "https-localhost": "^4.7.1",
     "husky": "^8.0.3",
     "jsdom": "^23.2.0",
     "msw": "^2.0.14",
     "pnpm": "^8.14.1",
     "postcss": " ^8.4.33",
     "prettier": "^3.2.2",
+    "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": " ^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": " ^10.9.2",
     "typescript": " ~5.3.3",
     "vite": " ^5.0.11",
+    "vite-plugin-pwa": "^0.17.4",
     "vite-tsconfig-paths": " ^4.2.3",
     "vitest": "^1.2.0",
-    "vue-tsc": " ^1.8.27"
+    "vue-tsc": " ^1.8.27",
+    "workbox-core": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-window": "^7.0.0"
   }
 }
