--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,25 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
 # testing
 /coverage
 /html
-
-# production
-/build
+stats.html
 
 # MSW browser mocking init file
 public/mockServiceWorker.js
 
 # misc
-.DS_Store
 .env.*
 !.env.*.example
+node_modules
+build
+dev-dist
+dist
+dist-ssr
+*.local
+*.tsbuildinfo
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
 .idea
@@ -45,5 +37,4 @@ dist-ssr
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-
 .yarn/install-state.gz
