--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "scripts": {
     "prepare": "husky install",
     "gen:pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
-    "format": "prettier --write src/",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "typesafe-i18n": "typesafe-i18n",
+    "i18n": "typesafe-i18n",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:preview": "vite preview --outDir html",
     "test:preview:coverage": "vite preview --outDir coverage",
+    "regression": "run-p lint typecheck test",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
     "dev-only": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
-    "dev": "run-p dev-only typesafe-i18n",
+    "dev": "run-p dev-only i18n",
     "dev:claims": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW=true vite --force",
     "dev:destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true SW_DESTROY=true vite --force",
     "dev:claims-destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW_DESTROY=true SW=true vite --force",
@@ -53,8 +53,8 @@
   },
   "dependencies": {
     "@rifandani/nxact-yutiriti": "^1.2.2",
-    "@tanstack/vue-query": "^5.17.11",
-    "@tanstack/vue-query-devtools": "^5.17.11",
+    "@tanstack/vue-query": "^5.17.19",
+    "@tanstack/vue-query-devtools": "^5.17.21",
     "@vee-validate/zod": " ^4.12.4",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.5",
@@ -65,13 +65,13 @@
     "type-fest": " ^4.9.0",
     "typesafe-i18n": "^5.26.2",
     "vee-validate": " ^4.12.4",
-    "vue": "^3.4.13",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4",
-    "zod-validation-error": "^2.1.0"
+    "zod-validation-error": "^3.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.2",
+    "@antfu/eslint-config": "^2.6.3",
     "@commitlint/cli": " ^18.4.4",
     "@commitlint/config-conventional": " ^18.4.4",
     "@iconify/vue": "^4.1.1",
@@ -83,32 +83,32 @@
     "@testing-library/vue": " ^8.0.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": " ^21.1.6",
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.11.5",
     "@vite-pwa/assets-generator": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
-    "@vitest/coverage-istanbul": "^1.2.0",
-    "@vitest/ui": "^1.2.0",
+    "@vitest/coverage-istanbul": "^1.2.1",
+    "@vitest/ui": "^1.2.1",
     "@vue/tsconfig": " ^0.5.1",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "eslint": " ^8.56.0",
     "eslint-plugin-format": "^0.1.0",
     "https-localhost": "^4.7.1",
     "husky": "^8.0.3",
-    "jsdom": "^23.2.0",
-    "msw": "^2.0.14",
+    "jsdom": "^24.0.0",
+    "msw": "^2.1.3",
     "pnpm": "^8.14.1",
     "postcss": " ^8.4.33",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": " ^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": " ^10.9.2",
     "typescript": " ~5.3.3",
-    "vite": " ^5.0.11",
+    "vite": "^5.0.12",
     "vite-plugin-pwa": "^0.17.4",
-    "vite-tsconfig-paths": " ^4.2.3",
-    "vitest": "^1.2.0",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.1",
     "vue-tsc": " ^1.8.27",
     "workbox-core": "^7.0.0",
     "workbox-precaching": "^7.0.0",
