--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@rollup/plugin-replace": "^5.0.5",
     "@tailwindcss/forms": " ^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/eslint-plugin-query": "^5.17.20",
     "@testing-library/jest-dom": " ^6.2.0",
     "@testing-library/user-event": " ^14.5.2",
     "@testing-library/vue": " ^8.0.1",
