--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-app",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@8.14.1",
+  "packageManager": "pnpm@8.15.0",
   "description": "Bulletproof Vue 3 SPA Template",
   "author": "Tri Rizeki Rifandani",
   "license": "MIT",
@@ -10,7 +10,7 @@
     "workerDirectory": "public"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "gen:pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -57,11 +57,11 @@
     "@tanstack/vue-query-devtools": "^5.17.21",
     "@vee-validate/zod": " ^4.12.4",
     "@vueuse/core": "^10.7.2",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "pinia": "^2.1.7",
-    "primevue": "^3.46.0",
+    "primevue": "^3.47.2",
     "tailwind-merge": "^2.2.1",
-    "type-fest": "^4.10.0",
+    "type-fest": "^4.10.1",
     "typesafe-i18n": "^5.26.2",
     "vee-validate": " ^4.12.4",
     "vue": "^3.4.15",
@@ -71,37 +71,37 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
-    "@commitlint/cli": "^18.5.0",
-    "@commitlint/config-conventional": "^18.5.0",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@iconify/vue": "^4.1.1",
     "@rollup/plugin-replace": "^5.0.5",
     "@tailwindcss/forms": " ^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/eslint-plugin-query": "^5.17.20",
-    "@testing-library/jest-dom": "^6.2.1",
+    "@tanstack/eslint-plugin-query": "^5.17.22",
+    "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/user-event": " ^14.5.2",
     "@testing-library/vue": " ^8.0.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": " ^21.1.6",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.8",
     "@vite-pwa/assets-generator": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
-    "@vitest/coverage-istanbul": "^1.2.1",
-    "@vitest/ui": "^1.2.1",
+    "@vitest/coverage-istanbul": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
     "@vue/tsconfig": " ^0.5.1",
     "autoprefixer": "^10.4.17",
     "eslint": " ^8.56.0",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-tailwindcss": "^3.14.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-vuejs-accessibility": "^2.2.1",
     "https-localhost": "^4.7.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.6",
     "jsdom": "^24.0.0",
-    "msw": "^2.1.4",
+    "msw": "^2.1.5",
     "npm-run-all2": "^6.1.1",
-    "pnpm": "^8.14.2",
+    "pnpm": "^8.15.0",
     "postcss": " ^8.4.33",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
@@ -111,9 +111,9 @@
     "ts-node": " ^10.9.2",
     "typescript": " ~5.3.3",
     "vite": "^5.0.12",
-    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-pwa": "^0.17.5",
     "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.2.1",
+    "vitest": "^1.2.2",
     "vue-tsc": " ^1.8.27",
     "workbox-core": "^7.0.0",
     "workbox-precaching": "^7.0.0",
