feat(i18n): uninstall typesafe-i18n, use intlify

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "i18n": "typesafe-i18n",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
@@ -24,8 +23,7 @@
     "regression": "run-p lint typecheck test",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
-    "dev-only": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
-    "dev": "run-p dev-only i18n",
+    "dev": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
     "dev:claims": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW=true vite --force",
     "dev:destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true SW_DESTROY=true vite --force",
     "dev:claims-destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW_DESTROY=true SW=true vite --force",
@@ -62,9 +60,9 @@
     "primevue": "^3.47.2",
     "tailwind-merge": "^2.2.1",
     "type-fest": "^4.10.2",
-    "typesafe-i18n": "^5.26.2",
     "vee-validate": "^4.12.5",
     "vue": "^3.4.15",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4",
     "zod-validation-error": "^3.0.0"
