--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,10 @@
   "[typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "veco.packager.versionTarget": "latest"
+  "i18n-ally.keystyle": "flat",
+  "i18n-ally.sourceLanguage": "en-US",
+  "i18n-ally.regex.key": ".*?",
+  "i18n-ally.localesPaths": "./src/i18n",
+  "i18n-ally.enabledFrameworks": ["vue"],
+  "veco.packager.versionTarget": "latest",
 }
