ci: fix test, add script test:quiet

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "test": "vitest",
+    "test:quiet": "vitest --watch=false",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:preview": "vite preview --outDir html",
     "test:preview:coverage": "vite preview --outDir coverage",
-    "regression": "run-p lint typecheck test",
+    "regression": "run-p lint typecheck test:quiet",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
     "dev": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
