feat: init storybook

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dev:claims": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW=true vite --force",
     "dev:destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true SW_DESTROY=true vite --force",
     "dev:claims-destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW_DESTROY=true SW=true vite --force",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "build-only": "vite build",
     "build-only:staging": "vite build --mode staging",
     "build": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true run-s typecheck build-only",
@@ -75,10 +77,18 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.9.0",
+    "@chromatic-com/storybook": "^1.2.25",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@iconify/vue": "^4.1.1",
     "@rollup/plugin-replace": "^5.0.5",
+    "@storybook/addon-essentials": "^8.0.4",
+    "@storybook/addon-interactions": "^8.0.4",
+    "@storybook/addon-links": "^8.0.4",
+    "@storybook/blocks": "^8.0.4",
+    "@storybook/test": "^8.0.4",
+    "@storybook/vue3": "^8.0.4",
+    "@storybook/vue3-vite": "^8.0.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.28.6",
@@ -97,6 +107,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-jest-dom": "^5.2.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-vuejs-accessibility": "^2.2.1",
@@ -109,6 +120,7 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
+    "storybook": "^8.0.4",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
