--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,6 +7,7 @@
       "#i18n/*": ["./i18n/*"],
       "#lib/*": ["./lib/*"],
       "#mocks/*": ["./mocks/*"],
+      "#stories/*": ["./stories/*"],
       "#auth/*": ["./modules/auth/*"],
       "#home/*": ["./modules/home/*"],
       "#playground/*": ["./modules/playground/*"],
