--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-app",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@9.0.6",
   "description": "Bulletproof Vue 3 SPA Template",
   "author": "Tri Rizeki Rifandani",
   "license": "MIT",
@@ -12,6 +12,8 @@
   "scripts": {
     "prepare": "husky",
     "gen:pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
+    "msw:init": "msw init public/ --save",
+    "msw:delete": "rm -rf public/mockServiceWorker.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -22,14 +24,13 @@
     "test:preview": "vite preview --outDir html",
     "test:preview:coverage": "vite preview --outDir coverage",
     "regression": "run-p lint typecheck test:quiet",
-    "msw:init": "msw init public/ --save",
-    "msw:delete": "rm -rf public/mockServiceWorker.js",
+    "storybook": "storybook dev -p 6006",
+    "storybook:test": "test-storybook",
+    "storybook:build": "storybook build",
     "dev": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
     "dev:claims": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW=true vite --force",
     "dev:destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true SW_DESTROY=true vite --force",
     "dev:claims-destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW_DESTROY=true SW=true vite --force",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "build-only": "vite build",
     "build-only:staging": "vite build --mode staging",
     "build": "DEBUG=vite-plugin-pwa BASE_URL=/ SOURCE_MAP=true run-s typecheck build-only",
@@ -77,18 +78,24 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.9.0",
-    "@chromatic-com/storybook": "^1.2.25",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@iconify/vue": "^4.1.1",
     "@rollup/plugin-replace": "^5.0.5",
-    "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^8.0.4",
-    "@storybook/addon-links": "^8.0.4",
-    "@storybook/blocks": "^8.0.4",
-    "@storybook/test": "^8.0.4",
-    "@storybook/vue3": "^8.0.4",
-    "@storybook/vue3-vite": "^8.0.4",
+    "@storybook/addon-a11y": "^8.0.6",
+    "@storybook/addon-coverage": "^1.0.1",
+    "@storybook/addon-designs": "^8.0.0",
+    "@storybook/addon-essentials": "^8.0.6",
+    "@storybook/addon-interactions": "^8.0.6",
+    "@storybook/addon-links": "^8.0.6",
+    "@storybook/addon-themes": "^8.0.6",
+    "@storybook/blocks": "^8.0.6",
+    "@storybook/manager-api": "^8.0.6",
+    "@storybook/test": "^8.0.6",
+    "@storybook/test-runner": "^0.17.0",
+    "@storybook/theming": "^8.0.6",
+    "@storybook/vue3": "^8.0.6",
+    "@storybook/vue3-vite": "^8.0.6",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.28.6",
@@ -120,7 +127,7 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
-    "storybook": "^8.0.4",
+    "storybook": "^8.0.6",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
@@ -129,6 +136,7 @@
     "vite-plugin-pwa": "^0.19.7",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0",
+    "vue-component-meta": "^2.0.10",
     "vue-tsc": "^2.0.7",
     "workbox-core": "^7.0.0",
     "workbox-precaching": "^7.0.0",
