chore: bump deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-app",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@9.0.6",
+  "packageManager": "pnpm@9.1.4",
   "description": "Bulletproof Vue 3 SPA Template",
   "author": "Tri Rizeki Rifandani",
   "license": "MIT",
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "prepare": "husky",
+    "clean-install": "find . \\( -name node_modules -type d -o -name pnpm-lock.json -type f \\) | xargs rm -rf && npm install",
     "gen:pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
@@ -82,20 +83,20 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@iconify/vue": "^4.1.1",
     "@rollup/plugin-replace": "^5.0.5",
-    "@storybook/addon-a11y": "^8.0.6",
-    "@storybook/addon-coverage": "^1.0.1",
-    "@storybook/addon-designs": "^8.0.0",
-    "@storybook/addon-essentials": "^8.0.6",
-    "@storybook/addon-interactions": "^8.0.6",
-    "@storybook/addon-links": "^8.0.6",
-    "@storybook/addon-themes": "^8.0.6",
-    "@storybook/blocks": "^8.0.6",
-    "@storybook/manager-api": "^8.0.6",
-    "@storybook/test": "^8.0.6",
-    "@storybook/test-runner": "^0.17.0",
-    "@storybook/theming": "^8.0.6",
-    "@storybook/vue3": "^8.0.6",
-    "@storybook/vue3-vite": "^8.0.6",
+    "@storybook/addon-a11y": "^8.1.5",
+    "@storybook/addon-coverage": "^1.0.4",
+    "@storybook/addon-designs": "^8.0.2",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-themes": "^8.1.5",
+    "@storybook/blocks": "^8.1.5",
+    "@storybook/manager-api": "^8.1.5",
+    "@storybook/test": "^8.1.5",
+    "@storybook/test-runner": "^0.18.2",
+    "@storybook/theming": "^8.1.5",
+    "@storybook/vue3": "^8.1.5",
+    "@storybook/vue3-vite": "^8.1.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.28.6",
@@ -127,7 +128,7 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
-    "storybook": "^8.0.6",
+    "storybook": "^8.1.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
