--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@storybook/addon-links": "^8.1.5",
     "@storybook/addon-themes": "^8.1.5",
     "@storybook/blocks": "^8.1.5",
+    "@storybook/builder-vite": "^8.1.5",
     "@storybook/manager-api": "^8.1.5",
     "@storybook/test": "^8.1.5",
     "@storybook/test-runner": "^0.18.2",
