ci: test storybook

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "test:preview": "vite preview --outDir html",
     "test:preview:coverage": "vite preview --outDir coverage",
     "regression": "run-p lint typecheck test:quiet",
-    "storybook": "storybook dev -p 6006",
-    "storybook:test": "test-storybook",
-    "storybook:build": "storybook build",
+    "story": "storybook dev -p 6006",
+    "story:test": "test-storybook",
+    "story:build": "storybook build",
     "dev": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true vite",
     "dev:claims": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true CLAIMS=true SW=true vite --force",
     "dev:destroy": "rimraf dev-dist && DEBUG=vite-plugin-pwa SW_DEV=true SW_DESTROY=true vite --force",
