chore: use separate vite storybook config, remove prettier and @storybook/builder-vite

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "prepare": "husky",
-    "clean-install": "find . \\( -name node_modules -type d -o -name pnpm-lock.json -type f \\) | xargs rm -rf && npm install",
     "gen:pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
+    "clean-install": "find . \\( -name storybook-static -type d -o -name node_modules -type d -o -name dev-dist -type d -o -name dist -type d -o -name html -type d -o -name pnpm-lock.json -type f \\) | xargs rm -rf && pnpm install",
     "msw:init": "msw init public/ --save",
     "msw:delete": "rm -rf public/mockServiceWorker.js",
     "lint": "eslint .",
@@ -93,7 +93,6 @@
     "@storybook/addon-links": "^8.1.5",
     "@storybook/addon-themes": "^8.1.5",
     "@storybook/blocks": "^8.1.5",
-    "@storybook/builder-vite": "^8.1.5",
     "@storybook/manager-api": "^8.1.5",
     "@storybook/test": "^8.1.5",
     "@storybook/test-runner": "^0.18.2",
@@ -128,7 +127,6 @@
     "msw": "^2.2.10",
     "npm-run-all2": "^6.1.2",
     "pnpm": "^8.15.5",
-    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "storybook": "^8.1.5",
