--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,6 @@
   "i18n-ally.localesPaths": "./src/i18n",
   "i18n-ally.enabledFrameworks": ["vue"],
   "veco.packager.versionTarget": "latest",
-  "veco.packager.exclude": ["v-calendar"],
+  "veco.packager.exclude": ["@storybook/*"],
   "typescript.tsdk": "node_modules/typescript/lib",
 }
